fixes inconsistency in image size and alignment

--- a/styles/portfolio-item.module.css
+++ b/styles/portfolio-item.module.css
@@ -26,10 +26,16 @@
 .portfolio__img {
   background: transparent;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 340px;
 }
 
 .portfolio__img img {
   border-radius: 10px;
+  height: 100%;
+  object-fit: contain;
 }
 
 .portfolio__keyword {
